<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/shape_ring_stroke" />

    <ImageView
        android:layout_width="@dimen/ring_radio"
        android:layout_height="@dimen/ring_radio"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_ring_shape_stroke"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/shape_ring_solid"/>

    <ImageView
        android:layout_width="@dimen/ring_radio"
        android:layout_height="@dimen/ring_radio"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_ring_shape_solid"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/shape_ring_gradient"/>

    <ImageView
        android:layout_width="@dimen/ring_radio"
        android:layout_height="@dimen/ring_radio"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_ring_shape_gradient"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/shape_ring_gradient_stroke"/>

    <ImageView
        android:layout_width="@dimen/ring_radio"
        android:layout_height="@dimen/ring_radio"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_ring_shape_gradient_stoke"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/shape_ring_gradient_rotate"/>

    <ProgressBar
        android:layout_width="@dimen/ring_radio"
        android:layout_height="@dimen/ring_radio"
        android:layout_gravity="center_horizontal"
        android:indeterminate="false"
        android:indeterminateDrawable="@drawable/background_ring_shape_gradient_rotate"/>

</LinearLayout>
